--- a/UI/Views/SettingsView.axaml
+++ b/UI/Views/SettingsView.axaml
@@ -5,6 +5,7 @@
              xmlns:vm="using:HyPrism.UI.ViewModels"
              xmlns:nav="using:HyPrism.UI.Components.Navigation"
              xmlns:inputs="using:HyPrism.UI.Components.Inputs"
+             xmlns:buttons="using:HyPrism.UI.Components.Buttons"
              xmlns:cv="using:HyPrism.UI.Converters"
              xmlns:svg="clr-namespace:Avalonia.Svg.Skia;assembly=Avalonia.Svg.Skia"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="600"
@@ -135,20 +136,10 @@
                 
                 <!-- Header / Close -->
                 <Grid Grid.Row="0">
-                    <Button Command="{Binding CloseCommand}" 
-                            HorizontalAlignment="Right" 
-                            VerticalAlignment="Top"
-                            Margin="20,20,20,0"
-                            Background="Transparent" 
-                            Foreground="White" 
-                            Width="32" 
-                            Height="32" 
-                            CornerRadius="6"
-                            Padding="6" 
-                            BorderThickness="0"
-                            Name="CloseButton">
-                         <svg:Svg Path="/Assets/Icons/x.svg" Width="20" Height="20"/>
-                    </Button>
+                    <buttons:CloseButton Command="{Binding CloseCommand}"
+                                         HorizontalAlignment="Right"
+                                         VerticalAlignment="Top"
+                                         Margin="20,20,20,0"/>
                 </Grid>
                 
                 <!-- Tab Contents -->
